# Linux-Stock-Service-Terminal-API

./: CMakeLists.txt  README.md
src/: HelpFunctions.c  HelpFunctions.h  Main.c  Operations.c  Operations.h
